--- a/static/fashionpointapp/style.css
+++ b/static/fashionpointapp/style.css
@@ -158,6 +158,7 @@
   margin-right: 140px; /* Same width as the sidebar + left position in px */
   font-size: 28px; /* Increased text to enable scrolling */
   padding: 10px 0px 0px 25px;
+  margin-bottom: 100px;
 }
 
 
