--- a/templates/fashionpointapp/signup.html
+++ b/templates/fashionpointapp/signup.html
@@ -7,7 +7,7 @@
 {% block body_block %}
     <link rel="stylesheet" type="text/css" href="{% static 'fashionpointapp/form.css' %}">
     <div class="user">
-          <div id="formContent">
+   <div id="formContent2">
     <header class="user__header">
         <h2 class="active">Sign up</h2>
     </header>
