--- a/static/fashionpointapp/form.css
+++ b/static/fashionpointapp/form.css
@@ -32,7 +32,8 @@
 }
 .postPic:hover{
 height: 350px;
-length: 350px;
+margin-bottom:20px;
+margin-top :30px;
 object-fit: scale-down;
 transform:scale(1.2);
  }
@@ -41,6 +42,7 @@ transform: scale(1.2);
 cursor: pointer ;
 }
 .arrow{
+transition: transform .25s ease-out;
 margin-left: -5px;
 margin-bottom: -10px;
 height: 100px;
@@ -52,6 +54,7 @@ width: 40px;
 }
 
 .postPic{
+transition: transform .25s ease-out;
 margin-left: -5px;
 height:250px;
 width:250px;
