myaccount(not ready)

--- a/templates/fashionpointapp/base.html
+++ b/templates/fashionpointapp/base.html
@@ -56,7 +56,9 @@
                         <a href="{% url 'newpoll' %}">New Poll</a>
                         {% endif %}
 
-                        <a href="{% url 'categories' %}">My Account</a>
+                        <a href="{% url 'view_profile' %}">My Account</a>
+						
+          
                 </div>
                 {% else %}
 
