--- a/templates/fashionpointapp/base.html
+++ b/templates/fashionpointapp/base.html
@@ -7,6 +7,8 @@
 
 <html>
     <head lang="en">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="{% static 'fashionpointapp/functions.js' %}"></script>
         <meta charset="UTF-8" />
         <title>
 
