--- a/templates/fashionpointapp/post.html
+++ b/templates/fashionpointapp/post.html
@@ -99,7 +99,7 @@
                          <input type="radio" id="star1" name="rating" value="1" /><label for="star1" title="Sucks big time">1 star</label>
 
                         </fieldset>
-                        <button class = "ratebutton" class="submit clearfix">Submit</button>
+                        <button class = "ratebutton" id="ratebutton" class="submit clearfix">Submit</button>
                     </form>
             <hr>
 
