--- a/templates/fashionpointapp/category.html
+++ b/templates/fashionpointapp/category.html
@@ -6,5 +6,6 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1 class='main' id="white""> {{ category.name }} </h1>
+    <h1 class='main' id="white"> {{ category.name }} </h1>
+    
 {% endblock %}
