--- a/templates/fashionpointapp/post.html
+++ b/templates/fashionpointapp/post.html
@@ -85,7 +85,7 @@
 
 
         <img id="column" src="/media/{{ post.photo }}">
-        <div id="column">
+        <div id="column1" style="margin:0px 0px 0px 300px;">
          <p id="discription2">{{ post.userPofile.user.first_name }} Says : </p>
          <p id="discription">{{ post.description }}</p>
           <div id="status"></div>
