--- a/templates/fashionpointapp/newPolls.html
+++ b/templates/fashionpointapp/newPolls.html
@@ -10,24 +10,27 @@
 			 margin-right:-80px;max-width:463px">
 			<hr/>
 			<div id="poll" style="display: inline-block;margin-top:15px;margin-bottom:15px;transition-duration: 0.25s;">
+				<a href="{% url 'show_poll' poll1%}">
 			<img class="pollPic" src="/media/{{poll1.picture1}}">
 			<img class="pollPic" src="/media/{{poll1.picture2}}">
+								</a>
 			</div>
 			<hr/>
 			<label>{{poll1.description}}</label>
 			<hr/>
-		{{poll1}}
 		</div>
 			<div id="formContent2" style="margin-right:-80px;max-width:463px">
 			<hr/>
-			<div id="poll" style="display: inline-block;margin-top:15px;margin-bottom:15px;transition-duration: 0.25s;">
+		<div id="poll" style="display: inline-block;margin-top:15px;margin-bottom:15px;transition-duration: 0.25s;">
+				<a href="{% url 'show_poll' poll2%}">
 			<img class="pollPic" src="/media/{{poll2.picture1}}">
 			<img class="pollPic" src="/media/{{poll2.picture2}}">
+					                </a>
+
 			</div>
 			<hr/>
 			<label>{{poll2.description}}</label>
 			<hr/>
-		{{poll2}}
 		</div>
 
 			{% if state4 != 1 %}
