--- a/templates/fashionpointapp/categories.html
+++ b/templates/fashionpointapp/categories.html
@@ -9,8 +9,31 @@
 	{% block list %}
     {% endblock %}
 
-{% block body_block %}
-    <h1 class="main" id="white"> Categories </h1>
+{% block body_block %} 
+	<link rel="stylesheet" type="text/css" href="{% static 'fashionpointapp/form.css' %}">
+<div class="main">
+    <h1 id="white"> Categories </h1>
+
+<div class=whitehead id="everything" style="margin-bottom: 100px;">
+    {% if categories %}
+    {% for c in categories %}
+                <a href="{% url 'show_category' c.slug %}">
+
+                		<div id="formContent2" style="margin-right:-80px;max-width:350px;margin-bottom:30px;">
+                			<p>{{ c.name }}</p>
+                			<img class="postPic" src="/media/{{c.picture}}">
+                		</div>
+                		
+                
+                </a>
+    {% endfor %}
+{% else %}
+        <li><strong>There are no categories present.</strong></li>
+{% endif %}
+<div/>
+
+</div>
+
 {% endblock %}
 
 
