--- a/templates/fashionpointapp/category.html
+++ b/templates/fashionpointapp/category.html
@@ -25,7 +25,7 @@
 
 		{% if polls %}
 		{% for p in polls %}
-		     <a href="{% url 'show_post' p.id %}">
+		     <a href="{% url 'show_poll' p.id %}">
 	                		<div id="formContent2" style="margin-right:-80px;max-width:350px;margin-bottom:30px;">
 	                			<div style="display: inline-block;">
 									<img style="width: 141px;" class="pollPic" src="/media/{{p.picture1}}">
