--- a/templates/fashionpointapp/myaccount.html
+++ b/templates/fashionpointapp/myaccount.html
@@ -5,7 +5,7 @@
 <title>Profile</title>
 {% endblock %}
 {% block body_block %}
-<link rel="stylesheet" type="text/css" href="{% static 'fashionpointapp/profile.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'fashionpointapp/form.css' %}">
     <div class="user">
           <div id="formContent">
 
