my account ready

--- a/static/fashionpointapp/profile.css
+++ b/static/fashionpointapp/profile.css
@@ -50,6 +50,10 @@ transform:scale(1.2);
 cursor: pointer ;
 
  }
+#profilePic{
+
+borde
+}
 .arrow:hover{
 transform: scale(1.2);
 cursor: pointer ;
