--- a/templates/fashionpointapp/base.html
+++ b/templates/fashionpointapp/base.html
@@ -58,10 +58,10 @@
                         <a href="{% url 'newpoll' %}">New Poll</a>
                         {% endif %}
 
-                        <a href="{% url 'view_profile' %}">My Account</a>
+                        <a href="{% url 'view_profile' user %}">My Account</a>
 						
           
-                </div>
+                		</div>
                 {% else %}
 
                 <div class="topnav">
@@ -78,8 +78,8 @@
                         {% endif %}
 
                 </div>
-                {% endif %}
-            
+
+            {% endif %}
 
             {% endblock %}
             {% if user.is_authenticated %}
@@ -107,12 +107,11 @@
 
         </div>
 
-        <div>
+
             {% block body_block %}
 
-            {% endblock %}
-        </div>
 
+            {% endblock %}
 
     {% block list %}
     <div class="sidenav">
