--- a/templates/fashionpointapp/myaccount.html
+++ b/templates/fashionpointapp/myaccount.html
@@ -4,6 +4,9 @@
 {% block head %}
 <title>Profile</title>
 {% endblock %}
+
+
+
 {% block body_block %}
 <link rel="stylesheet" type="text/css" href="{% static 'fashionpointapp/profile.css' %}">
     <div class="user">
@@ -21,30 +24,34 @@
     <p>Username: {{ user }}</p>
     <p>First name: {{ user.first_name }}</p>
     <p>Last name: {{ user.last_name}}</p>
-    <p>Email: {{ user.email }}</p>
-   	<input type="button"onclick="window.location.href='{% url 'edit_profile' %}'" value="edit" />
-               
+	{% if user == request.user %}
+    	<p>Email: {{ user.email }}</p>
+   		<input type="button"onclick="window.location.href='{% url 'edit_profile' %}'" value="edit" />
+	{% endif %}
+	
 </form>	
 </div>
-<div id="formContent2" style="max-height:90px;max-width:800px;margin:-650px 0px 0px 300px;text-align:top;background: #d0f8ff;" >
+
+<div id="formContent2" style="max-height:90px;max-width:800px;margin:-600px 200px 0px 600px;text-align:top;background: #d0f8ff;" >
 <label style="Color:Black; font-size:20px;font-family: 'Poppins', sans-serif; ">{{ user }}'s  Posts
 </label></div>
 	
 <div class="main">
     <h1 id="white"> {{ post.userPofile.user.first_name}} </h1>
-
 	<div class=whitehead id="everything" style="margin-bottom: 100px;">
 	    {% for p in posts %}
 	                <a href="{% url 'show_post' p.id %}">
-	                		<div id="formContent2" style="margin-right:-85px;max-width:400px;margin-bottom:10px;">
-	                			<p style="color:black;font-size: 20px;" >{{ p.description }}</p>
-								<p style="color:black;font-size: 20px;" >{{ p.date }}</p>
+	                		<div id="formContent2" style="margin-right:0px;max-width:400px;margin-bottom:10px;">
+	                			<p style="color:black;font-size: 24px;" >{{ p.description }}</p>
+								<p style="color:black;font-size: 24px;" >{{ p.avgRating }}</p>
+									<a class="btn btn-outline-secondary" href="{% url 'Post_Delete' p.id %}">Delete</a>
+										<input type="button"onclick="window.location.href='{% url 'post_update' p.id %}'" value="edit" />
 	                		</div>
 	                </a>
 	    {% endfor %}
-		</div>
+	</div>
 </div>		
-<div id="formContent2" style="max-height:90px;max-width:800px;margin:-200px 0px 0px 300px;text-align:top;background: #d0f8ff;" >
+<div id="formContent2" style="max-height:90px;max-width:800px;margin:0px 200px 0px 600px;text-align:top;background: #d0f8ff;" >
 <label style="Color:Black; font-size:20px;font-family: 'Poppins', sans-serif; ">{{ user }}'s  Polls
 </label></div>
 <div class="main1">
@@ -52,7 +59,7 @@
 	<div class=whitehead id="everything" style="margin-bottom: 100px;">
 		{% for p in polls %}
 		     <a href="{% url 'show_poll' p.id %}">
-	                		<div id="formContent2" style="margin-right:325px;max-width:400px;margin-bottom:10px;">
+	                		<div id="formContent2" style="margin-right: 200px;max-width:400px;margin-bottom:10px;">
 	                			<p style="color:black;font-size: 20px;" >{{ p.description }}</p>
 							<p style="color:black;font-size: 20px;" >{{ p.date }}</p>
 	                		</div>	               			                
@@ -62,5 +69,6 @@
 		</div>
 </div>
 
-</div>
 {% endblock %}
+
+
